; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderercommon/extr_tr_noise.c_GetNoiseValue.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderercommon/extr_tr_noise.c_GetNoiseValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_noise_table = common dso_local global float* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32, i32, i32, i32)* @GetNoiseValue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @GetNoiseValue(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @INDEX(i32 %10, i32 %11, i32 %12, i32 %13)
  store i32 %14, i32* %9, align 4
  %15 = load float*, float** @s_noise_table, align 8
  %16 = load i32, i32* %9, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds float, float* %15, i64 %17
  %19 = load float, float* %18, align 4
  ret float %19
}

declare dso_local i32 @INDEX(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
